# Conception_MongoDB_With_ReplicaSet_Sharding

./: .gitignore  Add_lyon_data.ipynb  Pymongo_polars_analyse.ipynb  README.md  bi_connector_config.json  check_replicatset.sh  pyproject.toml  queries.yaml  schema.xlsx  start_replicatset.sh  start_sharding.sh  stop_replicaset.sh  stop_sharding.sh
